# OneM2M

./: .cproject  .project  Makefile  Makefile-Elements  Makefile.am  Makefile.in  config.status  configure  configure.ac  make.log1
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cse/: CSE-main.cc  CSEHandler.cc  CSEHandler.h  CSEMain.cc  CSEServer.cc  CSEServer.h
gtest/utest/: test_CSEBase.cc  test_Request.cc  test_Response.cc
include/: CSEBase.h  CommonTypes.h  CommonUtils.h  NSEBase.h  Request.h  RequestHandler.h  Response.h
nse/: NSEBase.cc
resource/: CommonTypes.proto
src/: CSEBase.cc  Request.cc  RequestHandler.cc  Response.cc
utest/data/.store/: root
utest/gmock/: NSEBase_mock.cc
